...
        android:maxLines="4"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AssistantBlackTitle"/>

    <!-- Not adding contentDescription as we will hide the button in Talkback mode -->
    <org.chromium.ui.widget.ChromeImageView
        android:id="@+id/tts_button"
        android:layout_width="@dimen/autofill_assistant_minimum_touch_target_size"
        android:layout_height="@dimen/autofill_assistant_minimum_touch_target_size"
        android:padding="@dimen/autofill_assistant_tts_button_padding"
        android:visibility="gone"
        android:tint="@color/default_icon_color"
        app:srcCompat="@drawable/ic_volume_on_white_24dp"/>
...
